Fixed up some stuff.

--- a/README
+++ b/README
@@ -1,4 +1,7 @@
 twtxt command line client
 =========================
 
-I wanted to try and make my own twtxt command line client.
+A plain text microblogging client.
+
+Usage
+-----
