Making sure people understand that this is just for fun.

--- a/README
+++ b/README
@@ -3,5 +3,4 @@ twtxt command line client
 
 A plain text microblogging client.
 
-Usage
------
+Please use the `official client <https://github.com/buckket/twtxt/>`_ instead, this is just for fun.
